--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <main>
-        <div>
-            
+    <div class="main-login">
+        <div class="left-login">
+            <h1>Faça login <br> E entre para o nosso time</h1>
         </div>
-        <div>
-
+        <div class="right-login">
+            <div class="card-login">
+                <div class="textfield">
+                    <label for="usuario">Usuário</label>
+                    <input type="text" name="usuario" placeholder="Usuário">
+                </div>
+                <div class="textfield">
+                    <label for="senha">Senha</label>
+                    <input type="password" name="senha" placeholder="Senha">
+                </div>
+                <button class="btn-login">Login</button>
+            </div>
         </div>
-    </main>
+    </div>
 </body>
 </html>
