--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="shortcut icon" href="imagens/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <div class="main-login">
         <div class="left-login">
-            <h1>Faça login <br> E entre para o nosso time</h1>
+            <h1>Faça login <br> entre para o nosso time</h1>
         </div>
         <div class="right-login">
             <div class="card-login">
